<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/WCDSMS" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:layout_weight="1">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TableRow>
			<TextView android:id="@+id/lblTo" android:text="@string/EN_TO" />
			<EditText android:id="@+id/txtTo" android:inputType="phone"
				android:hint="@string/EN_TO_HINT" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/lblText" android:text="@string/EN_TEXT" />
			<EditText android:id="@+id/txtText" android:hint="@string/EN_TEXT_HINT"
				android:maxLength="160" android:minLines="5"/>
		</TableRow>
		<TableRow>
			<Button android:id="@+id/btnSend" android:text="@string/EN_SEND"/>
		</TableRow>
		<TableRow>
		<TextView android:id="@+id/empty"/>
		<TextView android:id="@+id/lblTextWarning"/>
		</TableRow>
	</TableLayout>
</ScrollView>